[WIP] Started implementing typechecking graphs

--- a/giskard.cabal
+++ b/giskard.cabal
@@ -75,8 +75,8 @@ Library
                       Giskard.Calculus.Ppr
                       Giskard.Names
                       Giskard.Telepath.Types
-                      -- Giskard.Telepath.Graph
-                      -- Giskard.Telepath.Ops
+                      Giskard.Telepath.Graph
+                      Giskard.Telepath.Ops
                       -- Giskard.Telepath.Autograd
                       -- Giskard.Telepath.Engine
 
