--- a/giskard.cabal
+++ b/giskard.cabal
@@ -59,14 +59,13 @@ Library
                       hashable                >= 1.2.1.0  && < 1.5,
                       haskell-src-meta        >= 0.8      && < 0.9,
                       hmatrix,
-                      string-interpolate      ^>= 0.3,
                       lens                    >= 4.10     && < 5.2.0,
                       mtl                     >= 2.1.2    && < 2.3,
                       ordered-containers      >= 0.2      && < 0.3,
                       prettyprinter           >= 1.2.0.1  && < 1.8,
                       pretty-show             >= 1.9      && < 2.0,
                       primitive               >= 0.5.0.1  && < 1.0,
-                      template-haskell        >= 2.8.0.0  && < 2.18,
+                      template-haskell        >= 2.8.0.0,
                       text                    >= 1.2.2    && < 2.1,
                       transformers            >= 0.5.2.0  && < 0.7,
                       unordered-containers    >= 0.2.3.3  && < 0.3
