Moved Abstractions to their own file

--- a/giskard.cabal
+++ b/giskard.cabal
@@ -72,6 +72,7 @@ Library
 
   Exposed-modules:    Main
                       Giskard.Calculus
+                      Giskard.Calculus.Abstractions
                       Giskard.Calculus.ProtoTerm
                       Giskard.Calculus.SyntacticEq
                       -- Giskard.Calculus.Match
