[WIP] Adding Nix dependency/build management

--- a/giskard.cabal
+++ b/giskard.cabal
@@ -41,6 +41,24 @@ Library
   import:             common-options
   HS-Source-Dirs:     src
 
+  Exposed-modules:    Main
+                      Giskard.Calculus
+                      Giskard.Calculus.Abstractions
+                      Giskard.Calculus.ProtoTerm
+                      Giskard.Calculus.SyntacticEq
+                      -- Giskard.Calculus.Match
+                      Giskard.Names
+                      Giskard.Pretty
+                      Giskard.Typechecking.Tc
+                      Giskard.Typechecking.Common
+                      -- Giskard.Typechecking.STLC
+                      Giskard.Typechecking.SystemF
+                      -- Giskard.Telepath.Types
+                      -- Giskard.Telepath.Graph
+                      -- Giskard.Telepath.Ops
+                      -- Giskard.Telepath.Autograd
+                      -- Giskard.Telepath.Engine
+
   ghc-options:        -Wall -Wcompat
   CPP-Options:        -DCABAL
 
@@ -70,22 +88,7 @@ Library
                       transformers            >= 0.5.2.0  && < 0.7,
                       unordered-containers    >= 0.2.3.3  && < 0.3
 
-  Exposed-modules:    Main
-                      Giskard.Calculus
-                      Giskard.Calculus.Abstractions
-                      Giskard.Calculus.ProtoTerm
-                      Giskard.Calculus.SyntacticEq
-                      -- Giskard.Calculus.Match
-                      Giskard.Names
-                      Giskard.Pretty
-                      Giskard.Typechecking.Tc
-                      Giskard.Typechecking.Common
-                      -- Giskard.Typechecking.STLC
-                      Giskard.Typechecking.SystemF
-                      -- Giskard.Telepath.Types
-                      -- Giskard.Telepath.Graph
-                      -- Giskard.Telepath.Ops
-                      -- Giskard.Telepath.Autograd
-                      -- Giskard.Telepath.Engine
+  -- extra-libraries:    blas lapack
 
-  extra-libraries:    blas lapack
+  extra-lib-dirs:     /home/xand/.nix-profile/lib/
+
